--- a/1-ail-introduction/feeder_conti.tex
+++ b/1-ail-introduction/feeder_conti.tex
@@ -1,12 +1,3 @@
-\begin{frame}[fragile]                                                                                                                        
-   \frametitle{Feeding AIL with custom JSON}
-        \begin{itemize}
-                \item AIL - feeder from Twitter\footnote{\url{https://github.com/ail-project/ail-feeder-twitter}}
-                \item The AIL-feeder-twitter search in Twitter using Twint (without API), crawls the urls and pushes the results in AIL
-                \item The JSON format format can be extended via meta fields
-        \end{itemize}
-\end{frame}
-
 \begin{frame}[fragile]
 	\frametitle{Feeding AIL with custom JSON}
 	\begin{figure}[t]
@@ -32,9 +23,9 @@
 			\item Bitcoin addresses, maybe others,
 			\item onion hidden services
         	\end{itemize}
-                \item first we translated the files on english using deepl.com 
-		\item Support added in AIL to interpret jabber ids as usernames,
-		\item then we created a feeder to import json data in AIL.
+        \item first we translated the files on english using deepl.com
+		\item then we created a feeder to import json data in AIL
+		\item Support added in AIL to correlate jabber usernames
         \end{itemize}
 
 \end{frame}
