--- a/1-ail-introduction/feeder_importer.tex
+++ b/1-ail-introduction/feeder_importer.tex
@@ -1,22 +1,24 @@
 
+\subsubsection{AIL Feeders}
+
 \begin{frame}[fragile]
-    \frametitle{External feeders for AIL framework}
+    \frametitle{AIL feeders Importers}
     \begin{itemize}
         \item {\bf 12+ feeders are available} for all AIL users to feed from external sources
         \item External feeders can run anywhere and are completely separated from AIL framework
-        \item The feeder can use their {\bf own internal logic} and even JSON metadata
+        \item The feeder can use their {\bf own internal logic} and even push JSON metadata
         \item Feeder are then pushing the generated JSON to AIL API
     \end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]
-   \frametitle{Feeding AIL with Twitter posts and associated urls}
-        \begin{itemize}
-                \item AIL - feeder from Twitter\footnote{\url{https://github.com/ail-project/ail-feeder-twitter}}
-                \item The AIL-feeder-twitter {\bf search specific keywords on Twitter} using Twint (without API), crawls the urls and pushes the results in AIL
-                \item The JSON format format can be extended via meta fields
-        \end{itemize}
-\end{frame}
+% \begin{frame}[fragile]
+%    \frametitle{Feeding AIL with Twitter posts and associated urls}
+%         \begin{itemize}
+%                 \item AIL - feeder from Twitter\footnote{\url{https://github.com/ail-project/ail-feeder-twitter}}
+%                 \item The AIL-feeder-twitter {\bf search specific keywords on Twitter} using Twint (without API), crawls the urls and pushes the results in AIL
+%                 \item The JSON format format can be extended via meta fields
+%         \end{itemize}
+% \end{frame}
 
 \begin{frame}[fragile]
    \frametitle{Certificate transparency feeder for AIL}
@@ -41,7 +43,7 @@
     \begin{itemize}
         \item ail-feeder-leak\footnote{\url{https://github.com/ail-project/ail-feeder-leak}} automates the process to feed leaked large files automatically to AIL
     \end{itemize}
-    \includegraphics[scale=0.20]{./images/ail-feeder-leak.png}
+    \includegraphics[scale=0.20]{./images/feeder_leak.png}
 \end{frame}
 
 \begin{frame}[fragile]
