chg: [fix] minor updates

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -289,7 +289,7 @@
         \item Review different {\bf collection mechanisms} and {\bf sources}
         \item Learn how to create new modules
         \item Learn how to use, install and start AIL
-        \item {\bf Supporting investigation using the AIL framework} and including it in cyber threat intelligence lifecycle
+        \item {\bf Supporting investigation using the AIL framework} and including it in cyber threat intelligence life cycle
     \end{itemize}
 \end{frame}
 
@@ -472,7 +472,7 @@ response platforms
         \item Submission to threat sharing and incident response platform (\textbf{MISP} and \textbf{TheHive})
         \item \textbf{Full-text indexer} to index unstructured information
         \item \textbf{Tagging} for classification and searches
-        \item Terms, sets, regex and YARA \textbf{tracking and occurences}
+        \item Terms, sets, regex and YARA \textbf{tracking and occurrences}
         \item Archives, files and raw \textbf{submission} from the UI
         \item PGP, Cryptocurrency, Decoded (Base64, ...) and username Correlation
         \item And many more
@@ -594,7 +594,7 @@ response platforms
         \frametitle {Crawler}
         \begin{itemize}
                 \item Crawlers are used to navigate on regular website as well as .onion addresses (via automatic extraction of urls or manual submission)
-                \item Lacus ("scriptable" browser) is rending the pages (including javascript) and produce screenshots (HAR archive too)
+                \item Lacus\footnote{\url{https://github.com/ail-project/lacus}} ("scriptable" browser) is rending the pages (including javascript) and produce screenshots (HAR archive too)
         \end{itemize}
 \begin{figure}[h] 
     \centering 
@@ -778,7 +778,7 @@ response platforms
 \begin{frame}
     \frametitle{MISP Taxonomies}
         \begin{itemize}
-            \item {\bf Tagging} is a simple way to attach a classification to an event or anattribute.
+            \item {\bf Tagging} is a simple way to attach a classification to an event or attribute.
             \item {\bf Classification must be globally used to be efficient.}
             \item Provide a set of already defined classifications modeling estimative language
             \item Taxonomies are implemented in a simple JSON format \footnote{\url{https://github.com/MISP/misp-taxonomies}}.
