chg: [2] updated text

--- a/2-ail-use-cases/ail-training.tex
+++ b/2-ail-use-cases/ail-training.tex
@@ -589,17 +589,17 @@ response platforms
 \end{frame}
 
 \begin{frame}
-    \frametitle{Lacus}
-    	\begin{itemize}
-            \item Lacus\footnote{\url{https://github.com/ail-project/lacus}} is a capturing system using playwright, as a web service
-		    \item AIL utilizes Lacus for fetching and rendering domains.
-			\begin{itemize}
-				\item Lacus can be installed and executed outside of AIL,
-				\item Enqueue what you want to capture,
-				\item Trigger the capture,
-				\item Get the capture result,
-			\end{itemize}
-        \end{itemize}
+\frametitle{Lacus: Web Capturing System}
+\begin{itemize}
+\item Lacus\footnote{\url{https://github.com/ail-project/lacus}} is a web capturing system built on playwright.
+\item AIL utilizes Lacus for fetching and rendering domains.
+\begin{itemize}
+\item Lacus can be installed and used independently from AIL.
+\item Capture what you need by enqueuing requests.
+\item Initiate the capture process.
+\item Retrieve the capture results.
+\end{itemize}
+\end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -1179,6 +1179,15 @@ if __name__ == '__main__':
             \item Improved indexing relying on Solr, Lucene or other components
         \end{itemize}
 \end{frame}
+
+\begin{frame}
+\frametitle{Contact}
+\begin{itemize}
+\item CIRCL has developed a range of open-source tools for intelligence analysts and incident responders.
+\item We welcome partnerships and collaboration discussions. Feel free to contact us\footnote{\url{mailto:info@circl.lu}}.
+\end{itemize}
+\end{frame}
+
 
 
 \section{Annexes}
