--- a/2-ail-use-cases/feeder_importer.tex
+++ b/2-ail-use-cases/feeder_importer.tex
@@ -49,7 +49,7 @@
 \begin{frame}[fragile]
     \frametitle{AIL feeder ActivityPub}
     \begin{itemize}
-        \item ail-feeder-activity-pub\footnote{\url{https://github.com/ail-project/ail-feeder-activity-pub}} is feeder for the ActivityPub standard used in distributed social networks
+        \item ail-feeder-activity-pub\footnote{\url{https://github.com/ail-project/ail-feeder-activity-pub}} is feeder for the ActivityPub standard used in distributed social networks (e.g. Mastodon)
         \item Accounts are required on the ActivityPub instance to get the stream
     \end{itemize}
 \end{frame}
